<resources>
    <string name="app_name">Dental Care</string>
    <string name="facebook_app_id">1120096598031182</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tips">Dental Tips</string>
    <string name="ask">Ask a Dentist</string>
    <string name="profile">Profile</string>
    <string name="title">Dental Care</string>
    <string name="tips_title">Tips of the Week</string>
    <string name="notification">Notification</string>
    <string name="title_activity_settings">Settings</string>
    <string name="weekly_tips">Weekly Tips</string>
    <string name="are_u_dentist">Are you a dentist?</string>
    <string name="dentist_login">Dentist Login</string>
    <string name="username">Username</string>
    <string name="dentist_pass">"Password"</string>
    <string name="code_info">Please enter code provided to you by Dental Care representative</string>
    <string name="dentist_support">Email us at dentistsupport@dentalcare.com</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="logout">Log Out</string>
    <string name="sync">Sync</string>
    <string name="post_dental_tips">Post Dental Tips</string>
    <string name="dental_requests">Dental Requests</string>
    <string name="ask_dental_title"> Ask our highly qualified dentist for free</string>
    <string name="dental_problem_hint"> Please describe your dental problem here!</string>
    <string name="add_dental_image">Add a Photo</string>
    <string name="submit">Submit</string>
    <string name="share_profile">Share Profile</string>
    <string name="help">Support</string>
    <string name="info">About</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="email_dialog_title">Please Enter Your Email</string>
    <string name="add_zip">Add Zip Code</string>
    <string name="add_email">Add Email</string>
    <string name="add_age">Add Age</string>
    <string name="terms_conditions">Terms  &amp; Conditions</string>
    <string name="no_request">You have not made any dental request till yet.</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="tip_title">Title</string>
    <string name="tip_detail">Detail</string>
    <string name="submit_tip">Submit</string>
    <string name="range">Search Range</string>
    <string name="history">Requests History</string>
    <string name="title_activity_terms">TermsActivity</string>
    <string name="profile_age">Age</string>
    <string name="profile_name">Name</string>
    <string name="profile_zip">Zip Code</string>


</resources>
