<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.firstopiniondentist.fragments.AskDentistFragment">

    <!-- TODO: Update blank fragment layout -->


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:minLines="6"
        android:ems="10"
        android:background="@drawable/textbox"
        android:id="@+id/request_edit"
        android:hint="@string/dental_problem_hint"
        android:gravity="top"
        android:padding="20dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/request_title_spinner"
        android:layout_alignEnd="@+id/request_title_spinner"
        android:layout_alignStart="@+id/request_title_spinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ask_dental_title"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/request_title_spinner"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_alignEnd="@+id/textView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submit_button"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/request_edit"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:elevation="13dp"
        android:background="@drawable/actionbargradient" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:id="@+id/zip_frame"
        android:background="@android:color/holo_orange_dark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        >

        <TextView
            android:text="Please add zip code in your profile to find nearby dentist"
            android:textSize="12dp"
            android:layout_gravity="center"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ask_zip" />
    </FrameLayout>

</RelativeLayout>
