<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/post_tip_layout">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/placeholder_image"
        android:layout_marginTop="40dp"
        android:id="@+id/tip_item_image"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/tip_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tip_item_image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="57dp"
        android:id="@+id/tip_title_text"
        android:textAppearance="@android:style/TextAppearance" />

    <Button
        android:text="@string/submit_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tip_detail_edit"
        android:layout_marginTop="25dp"
        android:id="@+id/tip_post_button"
         />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:ems="10"
        android:id="@+id/tip_title_edit"
        android:textStyle="normal|bold"
        android:layout_alignBottom="@+id/tip_title_text"
        android:layout_alignLeft="@+id/tip_item_image"
        android:layout_alignStart="@+id/tip_item_image" />

    <TextView
        android:text="@string/tip_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tip_title_text"
        android:layout_alignLeft="@+id/tip_title_text"
        android:layout_alignStart="@+id/tip_title_text"
        android:layout_marginTop="33dp"
        android:id="@+id/tip_detail_text"
        android:textAppearance="@style/ProfileTitle" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:padding="8dp"
        android:ems="10"
        android:background="@drawable/textbox"
        android:layout_alignTop="@+id/tip_detail_text"
        android:layout_alignLeft="@+id/tip_title_edit"
        android:layout_alignStart="@+id/tip_title_edit"
        android:id="@+id/tip_detail_edit" />

</RelativeLayout>