<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"


    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.firstopiniondentist.main.SettingsActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:background="@android:color/darker_gray"
        android:layout_alignParentStart="true"></FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/notif_relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/notification"
            android:layout_alignTop="@+id/notify_switch"
            android:layout_toRightOf="@+id/imageView"
            android:layout_toEndOf="@+id/imageView"
            android:layout_marginLeft="42dp"
            android:layout_marginStart="42dp"
            android:id="@+id/textView4" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/notify_switch"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:checked="false" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:background="@android:drawable/ic_lock_silent_mode_off"
            android:layout_alignTop="@+id/textView4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:background="@android:color/darker_gray"
        android:layout_alignParentStart="true"></FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/share_public_relative">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/share_profile"
            android:layout_alignTop="@+id/share_public_switch"
            android:layout_toRightOf="@+id/share_public_image"
            android:layout_toEndOf="@+id/share_public_image"
            android:layout_marginLeft="42dp"
            android:layout_marginStart="42dp"
            android:id="@+id/share_public_text" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/share_public_switch"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:checked="false" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/share_public_image"
            android:background="@android:drawable/ic_lock_silent_mode_off"
            android:layout_alignTop="@+id/share_public_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:background="@android:color/darker_gray"
        android:layout_alignParentStart="true"></FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/info_relative">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/info"
            android:layout_marginLeft="56dp"
            android:layout_marginStart="56dp"
            android:id="@+id/info_text"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/info_image"
            android:layout_toEndOf="@+id/info_image" />



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/info_image"
            android:background="@android:drawable/ic_lock_silent_mode_off"
            android:layout_alignTop="@+id/info_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:background="@android:color/darker_gray"
        android:layout_alignParentStart="true"></FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/help_relative">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/help"
            android:layout_marginLeft="56dp"
            android:layout_marginStart="56dp"
            android:id="@+id/help_text"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/help_image"
            android:layout_toEndOf="@+id/help_image" />



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/help_image"
            android:background="@android:drawable/ic_lock_silent_mode_off"
            android:layout_alignTop="@+id/help_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:background="@android:color/darker_gray"
        android:layout_alignParentStart="true"></FrameLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/terms_relative">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/terms_conditions"
            android:layout_marginLeft="56dp"
            android:layout_marginStart="56dp"
            android:id="@+id/terms_text"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/terms_image"
            android:layout_toEndOf="@+id/terms_image" />



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/terms_image"
            android:background="@android:drawable/ic_lock_silent_mode_off"
            android:layout_alignTop="@+id/terms_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:background="@android:color/darker_gray"
        android:layout_alignParentStart="true"></FrameLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/logout_relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/logout"

            android:id="@+id/text_logout"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentLeft="true"
        android:background="@android:color/darker_gray"
        android:layout_alignParentStart="true"></FrameLayout>


</LinearLayout>
